--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -7,7 +7,7 @@
 // @import "myicons/*.png";
 
 $sans: Arial, FreeSans, sans-serif;
-$hSans: Verdana,"Bitstream Vera Sans","DejaVu Sans", sans-serif;
+$hSans: Verdana, "Bitstream Vera Sans", "DejaVu Sans", sans-serif;
 $hSansCond: Tahoma, Geneva, "DejaVu Sans Condensed", sans-serif;
 $serif: "Times New Roman", Times, "FreeSerif", "Nimbus Roman No9 L", serif;
 $bSerif: Georgia, "Bitstream Charter", "Century Schoolbook L", serif;
@@ -30,11 +30,12 @@ $lnHoverColor: lighten($lnColor, 15%);
 $containerWidth: 974px;
 
 // Font configuration
+//  ---------------------------------------------------------------------------
+
+@import "compass/typography/vertical_rhythm"; // http://compass-style.org/reference/compass/typography/vertical_rhythm/
 
 $baseFontFamily: $sans;
 $baseFontFamilyMono: $monospSerif;
-
-@import "compass/typography/vertical_rhythm"; // http://compass-style.org/reference/compass/typography/vertical_rhythm/
 
 $base-font-size: 14px; // The font size set on the root html element.
 $base-line-height: 18px; // This line-height determines the basic unit of vertical rhythm.
@@ -61,6 +62,9 @@ $column-width   : 4em;            // each column is 4em wide
 $gutter-width   : 1em;            // 1em gutters between columns
 $grid-padding   : $gutter-width;  // grid-padding equal to gutters
 
+// ============================================================================
+//    Breakpoints
+//=============================================================================
 
 $media-desktop_wide: 'screen and (min-width:1281px)';
 $media-desktop: 'screen and (max-width:1280px)';
